--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'io.objectbox' //apply last
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.jbs"
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -17,14 +17,20 @@ android {
         }
     }
 }
-ext.objectboxVersion = '2.3.1'
 dependencies {
+    def lifecycle_version = "2.0.0"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    //implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation "io.objectbox:objectbox-gradle-plugin:$objectboxVersion"
+    implementation 'joda-time:joda-time:2.10.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'androidx.annotation:annotation:1.0.1'
+    implementation 'com.google.android.material:material:1.0.0'
 }
