--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     //implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
+//    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-beta01'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
@@ -46,14 +47,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
     // Room (use 1.1.0-alpha2 for latest alpha)
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     // alternatively, just ViewModel
-//    implementation "android.arch.lifecycle:viewmodel:1.1.1"
+    //    implementation "android.arch.lifecycle:viewmodel:1.1.1"
     // alternatively, just LiveData
-//    implementation "android.arch.lifecycle:livedata:1.1.1"
+    //    implementation "android.arch.lifecycle:livedata:1.1.1"
     //
     implementation 'androidx.annotation:annotation:1.0.1'
     implementation 'com.google.android.material:material:1.0.0'
@@ -64,11 +65,12 @@ dependencies {
     // Butter Knife
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
-
     // DAGGER 2
-//    implementation "com.google.dagger:dagger:2.21"
-//    implementation 'com.google.dagger:dagger-android:2.17'
-//    implementation 'com.google.dagger:dagger-android-support:2.17'
-//    annotationProcessor 'com.google.dagger:dagger-android-processor:2.17'
-//    annotationProcessor 'com.google.dagger:dagger-compiler:2.17'
+    //    implementation "com.google.dagger:dagger:2.21"
+    //    implementation 'com.google.dagger:dagger-android:2.17'
+    //    implementation 'com.google.dagger:dagger-android-support:2.17'
+    //    annotationProcessor 'com.google.dagger:dagger-android-processor:2.17'
+    //    annotationProcessor 'com.google.dagger:dagger-compiler:2.17'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 }
