--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,11 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    //implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
-//    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-beta01'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha02'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
@@ -56,7 +55,8 @@ dependencies {
     // alternatively, just LiveData
     //    implementation "android.arch.lifecycle:livedata:1.1.1"
     //
-    implementation 'androidx.annotation:annotation:1.0.1'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'androidx.annotation:annotation:1.0.2'
     implementation 'com.google.android.material:material:1.0.0'
     compile('com.lamudi.phonefield:phone-field:0.1.3@aar') {
         transitive = true
